2005-05-27 Hasso Tepper <hasso at quagga.net>

	* bgpd.c: Deleting bgp->rsclient list needs fix similar to pree-groups
	  deleting fix. Avoid leaking bgp->group, bgp->peer and bgp->rsclient
	  lists.

2005-05-26 Hasso Tepper <hasso at quagga.net>

        * bgpd.c: Don't crash while deleting list of peer-groups.

2005-05-25 Hasso Tepper <hasso at quagga.net>

	* bgpd.c: Fix obvious (routeserver patch) merge error. This makes "no
	  neighbor x.x.x.x routemap [export|import] commands work again.

2005-05-23 Paul Jakma <paul@dishone.st>

	* bgp_routemap.c: add semi-colons to VTY_GET_* to match vty.h change
	* bgp_fsm.h: Add extern qualifier to exported functions
	* bgp_nexthop.c: add static to nexthop specific globals
	* *.h: Add guard defines

2005-05-19 Paul Jakma <paul@dishone.st>

	* bgp_fsm.c: (bgp_stop) use sockunion_free, not XFREE..
	* bgp_network.c: (bgp_getsockname) ditto
	  (bgp_accept) use XSTRDUP
	* bgp_routemap.c: (route_match_peer) ditto, als use a ret value and
	  remove one sockunion_free.
	* bgpd.c: (peer_delete) ditto.
	  XFREE the correct memtype, not free.
	  (peer_create) use XSTRDUP
	* bgp_packet.c: (bgp_stream_dup) deleted, stream_dup should be used
	  (various) update -> s/bgp_stream_dup/stream_dup
	  

2005-04-11 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* bgp_zebra.c (bgp_redistribute_set, bgp_redistribute_unset):
	  The 2nd arg to zebra_redistribute_send is now zclient instead of
	  zclient->sock.

2005-04-09 Akihiro Mizutani <mizutani@net-chef.net>

	* bgp_vty.c: Make "exit-address-family" work in IPv4 unicast address
	  family node.

2005-04-08 Martin Ling <martin-quagga@earth.li>

	* bgp_aspath.[ch], bgp_route.c, bgp_vty.c, bgpd.[ch]: Allow to enable
	  the length of confederation path segments to be included during the
	  as-path length check in the best path decision.

2005-04-02 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* bgp_zebra.c: (bgp_interface_delete) After deleting, set ifp->ifindex
	  to IFINDEX_INTERNAL.
